second fetch success

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <section>
 
     <nav id="navbar"></nav>
+    <div id="weather">
+      <!-- <table>
+        <tr>
+          <th>Min Temp</th>
+          <th>Max Temp</th>
+          <th>Current Temp</th>
+        </tr>
+        <tr></tr>
+      </table> -->
+    </div>
   </section>
 
   <script src="index.js"></script>
