solved temp toggle button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Random Travel App!</h1>
     
-    <button>Let's go!</button>
+    <button id='letsgo'>Let's go!</button>
   
   </div>
 
