started requireJS modular coding

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Random Travel App</title>
+  <script data-main="scripts/main" src="scripts/require.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -23,7 +24,5 @@
       
     </div>
   </section>
-
-  <script src="index.js"></script>
 </body>
 </html>
