--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Random Travel App</title>
-  <script data-main="scripts/main" src="node_modules/requirejs/require.js"></script>
+  <!-- <script data-main="scripts/main" src="node_modules/requirejs/require.js"></script> -->
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -25,6 +25,6 @@
     </div>
   </section>
 
-  <!-- <script src="index.js"></script> -->
+  <script src="index.js"></script>
 </body>
 </html>
